add better descriptions

--- a/app/content/categories/luggages.mdx
+++ b/app/content/categories/luggages.mdx
@@ -15,11 +15,11 @@ priceRanges: {
 
 | Product Name | Price Tier | Price (USD) | Why It's BIFL | Link to Buy |
 |--------------|------------|-------------|---------------|-------------|
-| Briggs & Riley Baseline Domestic Carry-On Spinner | $$$ | $599 | Known for its exceptional durability and a unique CX expansion system that increases packing space, these suitcases are built to withstand the rigors of travel. They also come with an exceptional warranty that even covers airline damage. | [Briggs & Riley](https://www.briggs-riley.com/products/baseline-domestic-carry-on-spinner) |
-| Travelpro Maxlite 5 Carry-on Spinner | $$ | $170 | Travelpro offers a wide range of durable and maneuverable suitcases with various features and price points. | [Travelpro](https://travelpro.com/products/maxlite-5-carry-on-spinner) |
-| Monos Carry-On Pro | $$$ | $295 | Monos suitcases have a sleek look and are easy to maneuver. The Carry-On Pro features a convenient front laptop compartment. | [Monos](https://monos.com/products/carry-on-pro) |
-| Briggs & Riley Baseline Large Expandable Spinner | $$$ | $799 | This suitcase has accompanied one traveler on over 30 flights and has been an "absolute champion." | [Briggs & Riley](https://www.briggs-riley.com/products/baseline-large-expandable-spinner) |
-| Travelpro x Travel + Leisure Large Check-In Trunk Spinner | $$$ | $429 | This suitcase is a stylish investment piece with a spacious interior. | [Travelpro](https://travelpro.com/products/travel-leisure-large-check-in-trunk-spinner) |
-| Osprey Farpoint 40 Travel Backpack | $$ | $185 | Osprey backpacks are known for their comfortable fit and durable construction that can withstand years of use. | [Osprey](https://www.osprey.com/us/en/product/farpoint-40-FARPOINT40_S22.html) |
-| Patagonia Black Hole® 40L Duffel Bag | $$ | $159 | This duffel bag is extremely durable and ultra-functional. | [Patagonia](https://www.patagonia.com/product/black-hole-40-liter-duffel/49341.html) |
-| Luggageworks Stealth 22" 737 | $$$ | $400 | This luggage features a robust, non-telescoping handle and durable construction, making it a reliable choice for frequent travelers. | https://luggageworks.com/products/stealth-22-737-bag-without-side-pockets |
+| Briggs & Riley Baseline Domestic Carry-On Spinner | $$$$ | $599 | The gold standard of buy-it-for-life luggage. Constructed from bulletproof ballistic nylon and a honeycomb frame, it’s *engineered* to withstand the brutalities of travel. Comes with an **unconditional lifetime warranty that even covers airline damage**. | [Briggs & Riley](https://www.briggs-riley.com/products/baseline-domestic-carry-on-spinner) |
+| Travelpro Maxlite 5 Carry-On Spinner | $$$ | $170 | A lightweight carry-on designed to be **surprisingly durable for its weight**. Travelpro bags often outlast pricier name brands and come with a limited lifetime warranty. | [Travelpro](https://travelpro.com/products/maxlite-5-carry-on-spinner) |
+| Monos Carry-On Pro | $$$$ | $295 | Features an aerospace-grade polycarbonate hard shell that is **extremely tough**. The ultra-smooth Lisof Silent Run wheels make maneuvering effortless. Comes with a limited lifetime warranty. | [Monos](https://monos.com/products/carry-on-pro) |
+| Briggs & Riley Baseline Large Expandable Spinner | $$$$ | $799 | Like its smaller sibling, this checked-size suitcase is practically indestructible and covered by B&R’s famous **lifetime guarantee**. Built for **heavy usage** with reinforced corners and double-stitched stress points. | [Briggs & Riley](https://www.briggs-riley.com/products/baseline-large-expandable-spinner) |
+| Travelpro x Travel + Leisure Large Check-In Trunk Spinner | $$$$ | $429 | A stylish “trunk” style suitcase that **doesn’t sacrifice durability**. Built with high-density poly fabric, robust stitching, and corner guards. Meant to log many miles while maintaining a premium look. | [Travelpro](https://travelpro.com/products/travel-leisure-large-check-in-trunk-spinner) |
+| Osprey Farpoint 40 Travel Backpack | $$$ | $185 | A legendary travel pack known for **bombproof construction**. Covered by Osprey’s **All Mighty Guarantee**, which offers free repairs *forever*. | [Osprey](https://www.osprey.com/us/en/product/farpoint-40-FARPOINT40_S22.html) |
+| Patagonia Black Hole® 40L Duffel Bag | $$$ | $159 | Ultra-durable and functional, designed to withstand years of travel. Made with water-resistant, highly resilient fabric. | [Patagonia](https://www.patagonia.com/product/black-hole-40-liter-duffel/49341.html) |
+| Luggageworks Stealth 22" 737 | $$$$ | $400 | Built for durability with a robust, non-telescoping handle. Frequently used by airline professionals for its **ultra-rugged construction**. | [Luggageworks](https://luggageworks.com/products/stealth-22-737-bag-without-side-pockets) |
