--- a/app/content/categories/airfilter.mdx
+++ b/app/content/categories/airfilter.mdx
@@ -12,10 +12,10 @@ priceRanges:
 
 ## Products
 
-| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
-|--------------|------------|-------------|------------------|-------------|
+| Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link |
+|--------------|------------|-------------|------------------|------|
 | Levoit Core 300 Air Purifier | $$$ | $100 | Reliable all-round HEPA purifier with a durable motor that "will work for ages" thanks to high-precision bearings and sturdy construction ([Levoit Core 300: Review of the Legendary Air Purifier](https://www.airpurifierfirst.com/review/levoit-core-300/#:~:text=,com%20%2F%20Milan%20Antonic)). Impressively effective filtration (in tests it left air cleaner than before pollutants) ([The 7 Best Air Purifiers, Tested by BHG](https://www.bhg.com/homekeeping/house-cleaning/cleaning-products-tools/best-air-purifiers-cleaner-home/#:~:text=The%20Levoit%20was%20so%20effective,5)), yet simple to maintain with readily available filters. | [Amazon](https://www.amazon.com/dp/B07VVK39F7?tag=buywhoa-20) |
 | Winix 5500-2 Air Purifier | $$$$ | $150 | Sturdy Korean-built unit known for quality ([Can we stop recommending the Winix 5500-2 and instead recommend the Winix D360? : r/AirPurifiers](https://www.reddit.com/r/AirPurifiers/comments/w9s3ac/can_we_stop_recommending_the_winix_55002_and/#:~:text=filter%20element,which%20has%20good%20manufacturing%20quality)) and low upkeep. Uses a True HEPA plus a washable carbon filter that traps odors and extends filter life (filters last up to one year) ([Winix 116130 - Winix Replacement Filter H - For Winix 5500-2 & AM80 Air Purifier](https://www.winixamerica.com/product/filter-h-116130/?add-to-cart=183191&bvstate=pg:2/ct:r&srsltid=AfmBOooauDLNu2Y-ECTXxHTkQoPB2mzk-j08YjzcYfOFDz1YY1LTbTMG#:~:text=,Filter%20once%20every%2012%20months)) ([Winix 116130 - Winix Replacement Filter H - For Winix 5500-2 & AM80 Air Purifier](https://www.winixamerica.com/product/filter-h-116130/?add-to-cart=183191&bvstate=pg:2/ct:r&srsltid=AfmBOooauDLNu2Y-ECTXxHTkQoPB2mzk-j08YjzcYfOFDz1YY1LTbTMG#:~:text=dust%2C%20smoke%2C%20pet%20dander%2C%20and,the%20True%20HEPA%20Filter%20life)), making it a long-lasting workhorse for medium-large rooms. | [Amazon](https://www.amazon.com/dp/B01D8DAYII?tag=buywhoa-20) |
-| Coway Airmega AP-1512HH "Mighty" | $$$$ | $200 | Time-tested top performer that still "stands tall" against newer models ([Coway Airmega AP-1512HH Mighty review - HouseFresh](https://housefresh.com/coway-airmega-ap-1512hh-review/#:~:text=Coway%20has%20proven%20itself%20time,more%20current%20units%20out%20there)). Solid build (made in South Korea) with a 3-year warranty ([Warranty & Registration for Coway Airmega Air Purifiers](https://cowaymega.ca/pages/back-up-of-warranty-registration-before-02-05-2024?srsltid=AfmBOopjXS3MIu9zB0I5ANiK65CQcs8au-Bd1sI5aDacR0Pi38iI1iep#:~:text=Limited%20Warranty%20,1216L%2C%20160%2C%20150%2C)), and owners report units running 24/7 for years without issues ([The recommended pick from the Wirecutter is the Coway AP-1512HH Mighty (as of th... | Hacker News](https://news.ycombinator.com/item?id=26102913#:~:text=s0rce%20%20%2039%20,next%20%5B%E2%80%93)). Its Eco mode and washable pre-filter further enhance longevity and easy maintenance. | [Amazon](https://www.amazon.com/dp/B01728NLRG?tag=buywhoa-20) |
-| Honeywell AirGenius 5 (HFD320) | $$$$ | $200 | Permanent filtration system – its ifD main filter is washable and designed to last up to 5 years with routine cleaning ([Honeywell Air Genius 5 Air Purifier with Permanent, Washable Filter ...](https://www.amazon.com/Honeywell-HFD320-Genius-Purifier-sq-ft/dp/B009P7SVHS#:~:text=Honeywell%20Air%20Genius%205%20Air,Brief%20content)). That means no costly replacements. This large-room purifier is built for steady, long-term use, and users praise its consistent performance and easy upkeep (just wash the filter). | [Amazon](https://www.amazon.com/dp/B009P7SVHS?tag=buywhoa-20) |
-| Austin Air HealthMate (HM400) | $$$$ | $715 | Built like a tank with an all-metal housing and massive filters. It carries a 5-year mechanical warranty and a 5-year pro-rated filter warranty ([Austin Air HealthMate | Hepa Filter Air Purifier | Sheffield Pottery](https://www.sheffield-pottery.com/products/austin-air-healthmate-400-replacement-filter-aahm?srsltid=AfmBOoqxltouCDF-IqvgkMdYZMn-RIT9dZTIYv8Jukpl6zwwi2-nZ1m-#:~:text=massive%20HEPA%20super,48%20states%20from%20Sheffield%20Pottery)) – unmatched in the industry. Its industrial-grade HEPA and carbon filtration (15 lbs of carbon) are made to run 24/7 for years, making it a go-to for durability and heavy-duty air cleaning. | [Amazon](https://www.amazon.com/dp/B0007Y830I?tag=buywhoa-20) |
+| Coway Airmega AP-1512HH Mighty | $$$$ | $200 | Time-tested top performer that still "stands tall" against newer models ([Coway Airmega AP-1512HH Mighty review - HouseFresh](https://housefresh.com/coway-airmega-ap-1512hh-review/#:~:text=Coway%20has%20proven%20itself%20time,more%20current%20units%20out%20there)). Solid build (made in South Korea) with a 3-year warranty ([Warranty & Registration for Coway Airmega Air Purifiers](https://cowaymega.ca/pages/back-up-of-warranty-registration-before-02-05-2024?srsltid=AfmBOopjXS3MIu9zB0I5ANiK65CQcs8au-Bd1sI5aDacR0Pi38iI1iep#:~:text=Limited%20Warranty%20,1216L%2C%20160%2C%20150%2C)), and owners report units running 24/7 for years without issues ([The recommended pick from the Wirecutter is the Coway AP-1512HH Mighty (as of th... | Hacker News](https://news.ycombinator.com/item?id=26102913#:~:text=s0rce%20%20%2039%20,next%20%5B%E2%80%93)). Its Eco mode and washable pre-filter further enhance longevity and easy maintenance. | [Amazon](https://www.amazon.com/dp/B01728NLRG?tag=buywhoa-20) |
+| Honeywell AirGenius 5 HFD320 | $$$$ | $200 | Permanent filtration system – its ifD main filter is washable and designed to last up to 5 years with routine cleaning ([Honeywell Air Genius 5 Air Purifier with Permanent, Washable Filter ...](https://www.amazon.com/Honeywell-HFD320-Genius-Purifier-sq-ft/dp/B009P7SVHS#:~:text=Honeywell%20Air%20Genius%205%20Air,Brief%20content)). That means no costly replacements. This large-room purifier is built for steady, long-term use, and users praise its consistent performance and easy upkeep (just wash the filter). | [Amazon](https://www.amazon.com/dp/B009P7SVHS?tag=buywhoa-20) |
+| Austin Air HealthMate HM400 | $$$$ | $715 | Built like a tank with an all-metal housing and massive filters. It carries a 5-year mechanical warranty and a 5-year pro-rated filter warranty ([Austin Air HealthMate | Hepa Filter Air Purifier | Sheffield Pottery](https://www.sheffield-pottery.com/products/austin-air-healthmate-400-replacement-filter-aahm?srsltid=AfmBOoqxltouCDF-IqvgkMdYZMn-RIT9dZTIYv8Jukpl6zwwi2-nZ1m-#:~:text=massive%20HEPA%20super,48%20states%20from%20Sheffield%20Pottery)) – unmatched in the industry. Its industrial-grade HEPA and carbon filtration (15 lbs of carbon) are made to run 24/7 for years, making it a go-to for durability and heavy-duty air cleaning. | [Amazon](https://www.amazon.com/dp/B0007Y830I?tag=buywhoa-20) |
