--- a/app/content/categories/hairdryer.mdx
+++ b/app/content/categories/hairdryer.mdx
@@ -3,12 +3,11 @@ title: "Hair Dryers"
 id: "hair-dryers"
 description: "Durable and high-quality hair dryers built to last a lifetime."
 lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $50",
-  "$$": "$50-150",
-  "$$$": "$150-300",
+priceRanges:
+  "$": "Under $50"
+  "$$": "$50-150"
+  "$$$": "$150-300"
   "$$$$": "$300+"
-}
 ---
 
 ## Products
