--- a/app/content/categories/officechair.mdx
+++ b/app/content/categories/officechair.mdx
@@ -3,12 +3,11 @@ title: "Office Chairs"
 id: "office-chairs"
 description: "Durable and ergonomic office chairs designed for long-term use."
 lastUpdated: "2025-02-16"
-priceRanges: {
-  "$": "Under $500",
-  "$$": "$500-1000",
-  "$$$": "$1000-1500",
+priceRanges:
+  "$": "Under $500"
+  "$$": "$500-1000"
+  "$$$": "$1000-1500"
   "$$$$": "$1500+"
-}
 ---
 
 ## Products
@@ -17,13 +16,13 @@ priceRanges: {
 |--------------|------------|-------------|---------------|------|
 | HON Ignition 2.0 | $$ | $458 | A well-built, adjustable office chair often cited as a budget alternative to Steelcase or Herman Miller. It boasts a sturdy frame and quality mechanisms – HON even provides a *lifetime warranty* on most components. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW/ref=nosim?tag=buywhoa-20) |
 | Steelcase Series 1 | $$ | $499 | Steelcase is known for chairs that *last*, and the Series 1 is their entry model that still carries a **12-year warranty** covering 24/7 usage. Its build includes a sturdy frame, LiveBack flexible support, and high-quality mesh – all engineered for longevity. | [Amazon](https://www.amazon.com/dp/B078H9VXFD/ref=nosim?tag=buywhoa-20) |
-| Steelcase Leap V2 | $$$$ | $1,300 | A top-of-the-line ergonomic chair built for **long-term durability**. The Leap v2 comes with Steelcase’s **12-year 24/7 warranty**, and its durable steel frame and high-quality components ensure it holds up over years of daily use. | [Amazon](https://www.amazon.com/dp/B00GBUPX6G/ref=nosim?tag=buywhoa-20) |
-| Herman Miller Embody | $$$$ | $1,464 | A futuristic chair with dozens of tiny “pixel” support coils – built to last with **Herman Miller’s 12-year warranty**. The Embody’s materials ensure **years of daily use without losing shape or comfort**. | [Amazon](https://amzn.to/419zHMC) |
-| Herman Miller Aeron | $$$$ | $1,316 | An **iconic, ultra-durable chair** that’s been in production since 1994. Thousands of original Aerons are *still in use* today, with **no sagging mesh or broken parts**. Backed by **Herman Miller’s 12-year warranty**. | [Amazon](https://amzn.to/411t6U7) |
+| Steelcase Leap V2 | $$$$ | $1,300 | A top-of-the-line ergonomic chair built for **long-term durability**. The Leap v2 comes with Steelcase's **12-year 24/7 warranty**, and its durable steel frame and high-quality components ensure it holds up over years of daily use. | [Amazon](https://www.amazon.com/dp/B00GBUPX6G/ref=nosim?tag=buywhoa-20) |
+| Herman Miller Embody | $$$$ | $1,464 | A futuristic chair with dozens of tiny "pixel" support coils – built to last with **Herman Miller's 12-year warranty**. The Embody's materials ensure **years of daily use without losing shape or comfort**. | [Amazon](https://amzn.to/419zHMC) |
+| Herman Miller Aeron | $$$$ | $1,316 | An **iconic, ultra-durable chair** that's been in production since 1994. Thousands of original Aerons are *still in use* today, with **no sagging mesh or broken parts**. Backed by **Herman Miller's 12-year warranty**. | [Amazon](https://amzn.to/411t6U7) |
 | IKEA Markus | $$ | $399 | A budget-friendly high-back chair that has **surprisingly good longevity**. IKEA gives a **10-year warranty**, which is almost unheard of at this price. The Markus is simple but **built to last**. | [IKEA](https://www.ikea.com/us/en/p/markus-office-chair-vissle-dark-gray-70261150/) |
 | Haworth Fern | $$$$ | $1,500 | A flagship ergonomic chair from Haworth, featuring a **durable suspension back and premium materials**. Made to withstand **continuous use in high-demand environments**. | [Haworth](https://amzn.to/42Y3RVq) |
-| Steelcase Gesture | $$$$ | $1,399 | Designed to support modern work postures, the Gesture is built with **robust engineering** to allow extensive adjustability without fragility. Backed by **Steelcase’s 12-year 24/7 warranty**. | [Amazon](https://www.amazon.com/dp/B016OIF2JU/ref=nosim?tag=buywhoa-20) |
-| HON Ignition 2.0 (with headrest) | $$$ | $851 | The same **sturdy, well-built Ignition 2.0**, now with an adjustable headrest for added neck support. Backed by **HON’s lifetime warranty on the frame**. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW/ref=nosim?tag=buywhoa-20) |
+| Steelcase Gesture | $$$$ | $1,399 | Designed to support modern work postures, the Gesture is built with **robust engineering** to allow extensive adjustability without fragility. Backed by **Steelcase's 12-year 24/7 warranty**. | [Amazon](https://www.amazon.com/dp/B016OIF2JU/ref=nosim?tag=buywhoa-20) |
+| HON Ignition 2.0 (with headrest) | $$$ | $851 | The same **sturdy, well-built Ignition 2.0**, now with an adjustable headrest for added neck support. Backed by **HON's lifetime warranty on the frame**. | [Amazon](https://www.amazon.com/dp/B0CZBJ5JCW/ref=nosim?tag=buywhoa-20) |
 | Autonomous ErgoChair 2 | $$ | $469 | A modern ergonomic chair offering **extensive adjustability and a solid metal base**. Backed by a **2-year warranty on parts, 5-year on the frame**. | [Autonomous](https://www.autonomous.ai/office-chairs/ergochair-2) |
 | Branch Ergonomic Chair | $$ | $329 | A budget-friendly ergonomic chair with a **reinforced nylon frame and weight capacity of 300 lbs**. Branch provides a **7-year warranty**. | [Branch](https://www.branchfurniture.com/products/ergonomic-chair) |
 | Sihoo Doro C300 | $$ | $300 | A **comfortable and sturdy all-mesh chair** with high-tension mesh and a **3-year warranty**. Great for **long hours of work**. | [Amazon](https://www.amazon.com/dp/B07GNDDNMW/ref=nosim?tag=buywhoa-20) |
