--- a/app/content/categories/router.mdx
+++ b/app/content/categories/router.mdx
@@ -15,6 +15,6 @@ priceRanges:
 | Product Name | Price Tier | Price (USD) | Why It's BuyWhoa | Link to Buy |
 |--------------|------------|-------------|------------------|-------------|
 | TP-Link Archer A7 AC1750 | $$ | $50 | An inexpensive, tried-and-true router that performs as well as models twice its price ([Wirecutter's Best Deals of the Week - Forbes Vetted](https://www.forbes.com/sites/forbes-personal-shopper/2018/10/10/wirecutters-best-deals-of-the-week-9/#:~:text=Wirecutter%27s%20Best%20Deals%20of%20the,Fi%20router%20for%20most%20people)). It's easy to set up, handles dozens of devices with its stable dual-band Wi-Fi, and even supports OpenWRT/DD-WRT firmware for tinkerers. A top budget pick that "you don't have to spend $200" to get ([Wirecutter's Best Deals of the Week - Forbes Vetted](https://www.forbes.com/sites/forbes-personal-shopper/2018/10/10/wirecutters-best-deals-of-the-week-9/#:~:text=Wirecutter%27s%20Best%20Deals%20of%20the,Fi%20router%20for%20most%20people)). | [Amazon](https://www.amazon.com/dp/B079JD7F7G?tag=buywhoa-20) |
-| Linksys WRT3200ACM (Open Source Ready) | $$$$ | $200 | Built for power users, this router "lives up to the WRT54G legacy" with solid Wi-Fi performance and open-source firmware support ([Linksys WRT3200ACM Review (Page 5 of 5) | APH Networks](https://aphnetworks.com/reviews/linksys-wrt3200acm/5#:~:text=the%20WRT3200ACM%20certain%20lives%20up,you%20to%20lose%20smartphone%20app)) ([Linksys WRT3200ACM Review (Page 5 of 5) | APH Networks](https://aphnetworks.com/reviews/linksys-wrt3200acm/5#:~:text=The%20Linksys%20WRT3200ACM%20is%20a,with%20open%20source%20firmware%20support)). Its 1.8 GHz dual-core processor and 4-stream AC3200 radios deliver fast speeds, and it's designed to run DD-WRT/OpenWrt reliably for advanced tweaking. In short, a durable workhorse with enthusiast-grade longevity. | [Amazon](https://www.amazon.com/dp/B01JOXW3YE?tag=buywhoa-20) |
-| ASUS RT-AX3000 (AX58U) Wi-Fi 6 Router | $$$$ | $130 | Known for rock-solid reliability and long-term support. Asus provides frequent firmware updates (plus compatibility with ASUSWRT-Merlin custom firmware) ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=You%20can%20run%20Asus%20Merlin,and%20better%20than%20stock%20firm)), ensuring security and stability over years of use. This dual-band Wi-Fi 6 router offers great performance now and is future-proofed for new devices, all backed by a 2-year warranty and strong user community support. | [Amazon](https://www.amazon.com/dp/B084BNH26P?tag=buywhoa-20) |
-| ASUS RT-AX86U (AX5700) Gaming Router | $$$$ | $250 | A high-performance router built to last – its hardware and firmware are top-notch, and you can even run Asus's Merlin firmware for enhanced stability and features ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=You%20can%20run%20Asus%20Merlin,and%20better%20than%20stock%20firm)) ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=match%20at%20L558%20And%20full,now%20and%20its%20been%20fantastic)). With a heatsink-heavy design and a 2.5 Gbps port, it's engineered for heavy use. Owners report outstanding reliability and uptime, making it a long-term networking solution (many are still running it problem-free after years) ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=match%20at%20L558%20And%20full,now%20and%20its%20been%20fantastic)). | [Amazon](https://www.amazon.com/dp/B08BJHS3X7?tag=buywhoa-20) |
+| Linksys WRT3200ACM Open Source Ready | $$$$ | $200 | Built for power users, this router "lives up to the WRT54G legacy" with solid Wi-Fi performance and open-source firmware support ([Linksys WRT3200ACM Review (Page 5 of 5) | APH Networks](https://aphnetworks.com/reviews/linksys-wrt3200acm/5#:~:text=the%20WRT3200ACM%20certain%20lives%20up,you%20to%20lose%20smartphone%20app)) ([Linksys WRT3200ACM Review (Page 5 of 5) | APH Networks](https://aphnetworks.com/reviews/linksys-wrt3200acm/5#:~:text=The%20Linksys%20WRT3200ACM%20is%20a,with%20open%20source%20firmware%20support)). Its 1.8 GHz dual-core processor and 4-stream AC3200 radios deliver fast speeds, and it's designed to run DD-WRT/OpenWrt reliably for advanced tweaking. In short, a durable workhorse with enthusiast-grade longevity. | [Amazon](https://www.amazon.com/dp/B01JOXW3YE?tag=buywhoa-20) |
+| ASUS RT-AX3000 AX58U Wi-Fi 6 Router | $$$$ | $130 | Known for rock-solid reliability and long-term support. Asus provides frequent firmware updates (plus compatibility with ASUSWRT-Merlin custom firmware) ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=You%20can%20run%20Asus%20Merlin,and%20better%20than%20stock%20firm)), ensuring security and stability over years of use. This dual-band Wi-Fi 6 router offers great performance now and is future-proofed for new devices, all backed by a 2-year warranty and strong user community support. | [Amazon](https://www.amazon.com/dp/B084BNH26P?tag=buywhoa-20) |
+| ASUS RT-AX86U AX5700 Gaming Router | $$$$ | $250 | A high-performance router built to last – its hardware and firmware are top-notch, and you can even run Asus's Merlin firmware for enhanced stability and features ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=You%20can%20run%20Asus%20Merlin,and%20better%20than%20stock%20firm)) ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=match%20at%20L558%20And%20full,now%20and%20its%20been%20fantastic)). With a heatsink-heavy design and a 2.5 Gbps port, it's engineered for heavy use. Owners report outstanding reliability and uptime, making it a long-term networking solution (many are still running it problem-free after years) ([Asus RT-AX86U Gaming Router Review: Compact but Pricey | Tom's Hardware](https://www.tomshardware.com/reviews/asus-rt-ax86u-gaming-router-review#:~:text=match%20at%20L558%20And%20full,now%20and%20its%20been%20fantastic)). | [Amazon](https://www.amazon.com/dp/B08BJHS3X7?tag=buywhoa-20) |
