--- a/app/content/categories/blenders.mdx
+++ b/app/content/categories/blenders.mdx
@@ -3,12 +3,11 @@ title: "Blenders"
 id: "blenders"
 description: "Durable and high-quality blenders built to last a lifetime."
 lastUpdated: "2025-02"
-priceRanges: {
-  "$": "Under $50",
-  "$$": "$50-150",
-  "$$$": "$150-300",
+priceRanges:
+  "$": "Under $50"
+  "$$": "$50-150"
+  "$$$": "$150-300"
   "$$$$": "$300+"
-}
 ---
 
 ## Products
